--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -6,7 +6,7 @@
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 /**/
 var disqus_config = function () {
-  this.page.url = "[put_your_site_url_here]{{ page.url }}";
+  this.page.url = "https://techn0mad.github.io/{{ page.url }}";
   this.page.identifier = "{{ page.url }}";
 };
 /**/
