--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -6,13 +6,13 @@
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 /**/
 var disqus_config = function () {
-  this.page.url = "https://techn0mad.github.io/{{ page.url }}";
+  this.page.url = "https://blog.gadallah.com/{{ page.url }}";
   this.page.identifier = "{{ page.url }}";
 };
 /**/
 (function() { // DON'T EDIT BELOW THIS LINE
   var d = document, s = d.createElement('script');
-  s.src = 'https://techn0mad.disqus.com/embed.js';
+  s.src = 'https://blog.gadallah.com/embed.js';
   s.setAttribute('data-timestamp', +new Date());
   (d.head || d.body).appendChild(s);
 })();
