--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -1,12 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Techn0mad</title>
-    </head>
-    <body>
-        <h1>{{ pageTitle }}</h1>
-
-        {{ content }}
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <title>Techn0mad</title>
+  </head>
+  <body>
+    <header>
+      Site Header
+      <a href="/about">About</a>
+    </header>
+    <main>
+      <h1>{{ pageTitle }}</h1>
+      {{ content | safe }}
+    </main>
+    <footer>
+      Site Footer
+    </footer>
+  </body>
 </html>
