Tweaking Eleventy/GitHub Actions configs

--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,3 +1,3 @@
 <header class="mb3">
-  <h1 class="tc mb0"><a href="/">Techn0mad</a></h1>
+  <h1 class="tc mb0"><a href="https://techn0mad.github.io/techn0mad.github.io">Techn0mad</a></h1>
 </header>
